<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>phoenix_contours_to_gps_logger_node</name>
    <version>0.1.0</version>
    <description>A node template</description>
    <maintainer email="aboccacc@umich.edu">Alexander Boccaccio</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

        <!-- added for ROS listeners-->
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>phnx_msgs</depend>


    <!--Messages TODO_EXTRA-->
    <depend>ackermann_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>image_geometry</depend>


    <!--OpenCv Things TODO_EXTRA-->
    <depend>cv_bridge</depend>
    <depend>libopencv-dev</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_flake8</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_clang_tidy</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_nose</test_depend>
    <!-- for custom messges -->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
        
    </export>
</package>

